== CHANGELOG ==
20/02/17:
 - Fixed bug where adding a period in data_plot would insert the period correctly for all components except one (whichever one was first through the loop in Site.add_periods).
 - to_vtk functions in IO now supports a sea level correction to model and site elevations.
 - Added script 'to_vtk.py' which gives command line dialog for getting .vtk files for models and / or sites.
17/02/17:
 - When hovering plots in GUI, mouse info is given for log10 and normal scale periods AND frequency.
 - Middle mouse button clicks (when data selection is on) now gives data point period, frequency, and percent availability among sites.
 - Fixed bug where changing between datasets caused an error if the sites weren't the same. Seems to be fixed but keep an eye on it.
 - data plot GUI requires at least 1 data period be selected (won't let you remove all periods)
16/02/17:
 - Added a 'check_compromised_data' method to Data and RawData that checks for impedance data with suspect signs, i.e. negative ZXYR when it should be positive. This does not necessarily mean the data is bad, but just that it should be checked (particularly the phases)
 - Changed the default marker size in gplot to be smaller, so that small error bars could actually be seen.
 - Changed the way phase errors are calculated. Now errors are an average of the phases taken from all possible combinations of data + error. Not exact but good enough for these purposes.
15/02/17:
 - Added 'Write List' and 'Write Data' options in the top menu of data plot GUI.
 - Relevent methods added to data_structures and IO.
 - Added / fixed phase plotting methods in gplot.
 - compute_phase in pyMT.utilss now calculates errors. Keep an eye to make sure if its right. Errors are still not calculated for determinant rho or phase, need to do that later.
13/02/17:
 - pyMT.IO now issues WSFileError if datafile and listfile are mismatched (unequal number of sites). Also added relevant test case unit tests.
11/02/17: