@@ -1,4 +1,6 @@
 == CHANGELOG ==
+22/02/17:
+ - Added input 'mode' in RawData.get_locs that takes 'utm', 'latlong', or 'centered' to specify which type of site locations you want.
 20/02/17:
  - Fixed bug where adding a period in data_plot would insert the period correctly for all components except one (whichever one was first through the loop in Site.add_periods).
  - to_vtk functions in IO now supports a sea level correction to model and site elevations.
